--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
     "url": "git+https://github.com/aimeerivers/howoldami.git"
   },
   "scripts": {
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint . --ext .ts,.js --fix",
+    "lint:check": "eslint . --ext .ts,.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "devDependencies": {
+    "eslint-config-plus-prettier": "^1.5.10"
+  },
+  "prettier": "eslint-config-plus-prettier/.prettierrc.json"
 }
