--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "format:check": "prettier --check .",
     "lint": "eslint . --ext .ts,.js --fix",
     "lint:check": "eslint . --ext .ts,.js",
+    "package:lint": "npx npm-package-json-lint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint-config-plus-prettier": "^1.5.10"
+    "eslint-config-plus-prettier": "1.5.10",
+    "npm-package-json-lint": "8.0.0"
   },
   "prettier": "eslint-config-plus-prettier/.prettierrc.json"
 }
