--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint-config-plus-prettier": "1.5.18",
-    "npm-package-json-lint": "8.0.0"
+    "eslint-config-plus-prettier": "2.0.0"
   },
   "prettier": "eslint-config-plus-prettier/.prettierrc.json"
 }
