--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "type": "git",
     "url": "git+https://github.com/aimeerivers/howoldami.git"
   },
+  "type": "module",
   "scripts": {
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint": "eslint . --ext .ts,.js --fix",
-    "lint:check": "eslint . --ext .ts,.js",
+    "lint": "eslint --fix",
+    "lint:check": "eslint",
     "package:lint": "npx npm-package-json-lint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint-config-plus-prettier": "2.0.0"
+    "eslint-config-plus-prettier": "3.0.0"
   },
   "prettier": "eslint-config-plus-prettier/.prettierrc.json"
 }
