--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint-config-plus-prettier": "3.0.0"
+    "eslint-config-plus-prettier": "4.0.0"
   },
-  "prettier": "eslint-config-plus-prettier/.prettierrc.json"
+  "prettier": "eslint-config-plus-prettier/prettier"
 }
